Fix series aggregation
